src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Ranking__c</fullName>
        <label>Account Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Rating__c</fullName>
        <label>Account Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <label>Account Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Account_Status__c</fullName>
        <description>If any opportunity in the account is won and its contract end date is &gt;=TODAY, then this is automatically updated to Active; otherwise Prospect</description>
        <inlineHelpText>If any opportunity in the account is won and its contract end date is &gt;=TODAY, then this is automatically updated to Active; otherwise Prospect</inlineHelpText>
        <label>B2B Account Status</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B2B_Acct_Status__c</fullName>
        <description>If the account has an opportunity that is won and its contract end date &gt;= today, then Active; otherwise Prospect</description>
        <formula>if( AND (B2B_Account_Status__c &gt;0, Number_of_Renewals_Lost__c &lt;1),&quot;Active&quot;, IF(AND(B2B_Account_Status__c &gt;0, Number_of_Renewals_Lost__c &gt;=1),&quot;Churned customer&quot;,&quot;Prospect&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the account has an opportunity that is won and its contract end date &gt;= today, then Active; otherwise Prospect</inlineHelpText>
        <label>B2B Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Health_Score__c</fullName>
        <label>CS Health Score</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coursera_Advocate__c</fullName>
        <label>Coursera Advocate?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coursera_Org_ID__c</fullName>
        <externalId>true</externalId>
        <label>Coursera Org ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Account_Tier__c</fullName>
        <label>Customer Success Account Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <description>Aggregates employees into bucket field</description>
        <formula>if(NumberOfEmployees &gt;5000,&quot;&gt;5000&quot;,
if(NumberOfEmployees &gt;1000,&quot;1001-5000&quot;,
if(NumberOfEmployees &gt;500,&quot;501-1000&quot;,
if(NumberOfEmployees &gt;150,&quot;151-500&quot;,
if(NumberOfEmployees &gt;50,&quot;51-150&quot;,
if(NumberOfEmployees &gt;10,&quot;11-50&quot;,
&quot;1-10&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregates # employees into bucketed groups</inlineHelpText>
        <label>Employee Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exec Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Involved__c</fullName>
        <label>Exec Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Rick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nikhil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Julia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <inlineHelpText>Fiscal year end of the company: pulled from clearbit.</inlineHelpText>
        <label>Fiscal Year End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Territory__c</fullName>
        <globalPicklist>Geo_Territory_Values</globalPicklist>
        <inlineHelpText>Please select correct territory value based on country.</inlineHelpText>
        <label>Geo Territory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account is a government entity</description>
        <inlineHelpText>Checked if the account is a government entity</inlineHelpText>
        <label>Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICP__c</fullName>
        <label>ICP</label>
        <picklist>
            <picklistValues>
                <fullName>Ideal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <globalPicklist>Industry_Category</globalPicklist>
        <inlineHelpText>Industry Category from Clearbit Industry FIeld</inlineHelpText>
        <label>Industry Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Account SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logo_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if account is a nonprofit or 501c3</description>
        <inlineHelpText>Checked if account is a nonprofit or 501c3</inlineHelpText>
        <label>Nonprofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Renewals_Lost__c</fullName>
        <label>Number of Renewals Lost</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outbound_Account_Status__c</fullName>
        <label>Outbound Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Tier_16__c</fullName>
        <description>Internal tier for Coursera partnerships categorization in 2016</description>
        <inlineHelpText>Internal tier for Coursera partnerships categorization in 2016</inlineHelpText>
        <label>2016 Partner Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referencability_Type__c</fullName>
        <label>Referenceability Type</label>
        <picklist>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learner Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar/Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales References</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referencability__c</fullName>
        <label>Referencability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code_from_Clearbit__c</fullName>
        <inlineHelpText>This is the SIC code from clearbit mapped from lead</inlineHelpText>
        <label>SIC Code from Clearbit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Employee_Range__c</fullName>
        <label>Self Reported Employee Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_SFDC_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Temp SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016_B2B_Territory1__c</fullName>
        <description>Picklist options for 2016 territory assignment</description>
        <inlineHelpText>Picklist options for 2016 territory assignment</inlineHelpText>
        <label>2017 B2B Territory</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-India APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2016_B2B_Tier__c</fullName>
        <description>Reflects 2016 B2B prioritization</description>
        <inlineHelpText>Reflects 2016 B2B prioritization</inlineHelpText>
        <label>2017 B2B Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Named (Proactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experimental (Reactive)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitDomain__c</fullName>
        <formula>SUBSTITUTE(
if(find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))&gt;0,left(if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)),find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))-1),if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))

,&apos;www.&apos;, &apos;&apos;)</formula>
        <label>Clearbit Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearbitReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cbit__Clearbit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearbit</label>
        <referenceTo>cbit__Clearbit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isupdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For clearbit update - manual</description>
        <label>isupdated</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>cbit__Clearbit__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Current_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>B2B_Acct_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.B2B</value>
        </filters>
        <label>Current Customer Accounts</label>
    </listViews>
    <listViews>
        <fullName>Customer_Success_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Success_Account_Tier__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>B2B_Acct_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.B2B</value>
        </filters>
        <label>Customer Success View</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <label>B2B</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>